--- a/src/components/burger.scss
+++ b/src/components/burger.scss
@@ -1,10 +1,9 @@
 @use '../variables.scss' as variables;
 
 .burger {
-    position: relative;
     z-index: 20;
 
-    &__open, &__close, &__menu {
+    &, &__open, &__close, &__menu {
         position: fixed;
     }
     &__open, &__close {
@@ -44,9 +43,9 @@
     &__menu {
         top: 0;
         left: 0;
-        width: 96vw;
+        width: 100vw;
         height: 100vh;
-        transform: translateX(-100vw);
+        transform: translateX(-110vw);
         padding: 0 16px 16px 16px;
         background: var(--main-page-bgr);
         display: grid;
