fix input colors

--- a/src/components/input.scss
+++ b/src/components/input.scss
@@ -23,6 +23,8 @@
         font-size: 20px;
         font-weight: 400;
         line-height: 26px;
+        background: var(--main-background);
+        color: var(--main-color);
     }
     &__label {
         font-size: 12px;
